--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -24,6 +24,7 @@
 }
 
 @media all and (max-width: 1280px) {
+
     /* spotlight */
     #spotlight div.container div.right div.image div.content {
         position: absolute;
@@ -34,25 +35,30 @@
         padding: 25px 30px 0px;
         background-color: #faf9f7;
     }
+
     #spotlight div.container div.right div.image div.content p {
         font-size: 15px;
         margin-bottom: 22px;
         padding-right: 10px;
     }
+
     #spotlight div.container div.right div.image div.content h2 {
         font-weight: 600;
         font-size: 32px;
         margin: 5px 0px;
         padding-right: 40px;
     }
+
     /* work section  */
     #works div.container div.work ul li>div.location>h4 {
         font-size: 14px;
     }
+
     /* Why choice Us  */
     article div.container div.contents div.content p {
         font-size: 14px;
     }
+
     /* contact  */
     section.contact div.container div.left div.content h2 {
         color: #fff;
@@ -60,6 +66,7 @@
         font-weight: 500;
         font-size: 40px;
     }
+
     /* Help  */
     #help div.container div.left h2 {
         font-weight: 500;
@@ -67,7 +74,8 @@
         position: relative;
     }
 }
-@media all and (max-width: 1080px){
+
+@media all and (max-width: 1080px) {
     #spotlight div.container div.right div.image div.content {
         position: absolute;
         top: 30%;
@@ -77,34 +85,41 @@
         padding: 15px 20px 0px;
         background-color: #faf9f7;
     }
+
     #spotlight div.container div.right div.image div.content h2 {
         font-weight: 600;
         font-size: 30px;
         margin: 10px 0px;
         padding-right: 40px;
     }
+
     #spotlight div.container div.right div.image div.content p {
         font-size: 14px;
         margin-bottom: 30px;
         padding-right: 10px;
     }
+
     #about div.container div.right div.content h2 {
         position: relative;
         font-weight: 500;
         font-size: 30px;
         margin-bottom: 20px;
     }
+
     #about div.container div.right div.content p {
         padding-right: 0px;
         margin-bottom: 30px;
     }
+
     #works div.container div.work ul li>div.location>h4 {
         font-size: 12px;
         font-weight: 600;
     }
+
     #works div.container div.work ul li div.location a {
         font-size: 12px;
     }
+
     #works div.container div.work ul li div.location {
         position: absolute;
         bottom: 0px;
@@ -116,21 +131,25 @@
         z-index: 2;
         cursor: pointer;
     }
+
     section.contact div.container div.left div.content h2 {
         color: #fff;
         position: relative;
         font-weight: 500;
         font-size: 35px;
     }
+
     section.contact div.container div.right form div.input-container {
         width: 100%;
         height: 55px;
         position: relative;
         margin-bottom: 20px;
     }
+
     section.contact div.container div.right form div.textarea {
         height: 90px;
     }
+
     section.contact div.container div.right form button {
         display: block;
         text-align: center;
@@ -141,11 +160,13 @@
         font-size: 20px;
         cursor: pointer;
     }
+
     #help div.container div.left h2 {
         font-weight: 500;
         font-size: 28px;
         position: relative;
     }
+
     #help div.container div.right div.contents_And_Images {
         display: flex;
         justify-content: space-between;
@@ -153,66 +174,292 @@
         height: 100px;
         margin-top: 20px;
     }
+
     footer div.container div.top div.left p {
         font-size: 14px;
     }
 }
-@media all and (max-width: 980px){
+
+@media all and (max-width: 980px) {
+    #home {
+        height: auto;
+        width: 100%;
+    }
+
     header div.container div.left {
         width: 25%;
     }
+
     header div.container div.right {
         width: 75%;
     }
+
     #spotlight div.container {
-        height: calc(100vh - 80px);
+        height: auto;
         display: flex;
         flex-direction: column-reverse;
     }
+
     #spotlight div.container div.left {
         width: 100%;
         padding: 10px 0px;
     }
-    #spotlight div.container div.right {
-        width: 100%;
-        height: calc(100vh - 80px);
-        margin: 0 auto;
-    }
-    #spotlight div.container div.right div.image {
-        display: inline-block;
-        width: 50%;
-    }
+
     #spotlight div.container div.right {
         width: 100%;
         height: auto;
-       text-align: center;
+        text-align: right;
     }
+
+    #spotlight div.container div.right div.image {
+        display: inline-block;
+        width: 70%;
+    }
+
     #spotlight div.container div.right div.image div.content {
         position: absolute;
-        top: 30%;
-        left: -314px;
+        top: 29%;
+        left: -45%;
         height: 70%;
-        width: 67%;
-        padding: 15px 20px 0px;
+        width: 65%;
+        padding: 35px 25px 0px;
         text-align: left;
         background-color: #faf9f7;
     }
+
     #spotlight div.container div.right div.image div.content h2 {
         font-weight: 600;
-        font-size: 20px;
+        font-size: 24px;
         margin: 10px 0px;
         padding-right: 40px;
     }
+
     #spotlight div.container div.right div.image div.content p {
-        font-size: 12px;
-        margin-bottom: 15px;
+        font-size: 8px;
+        font-weight: 500;
+        margin-bottom: 30px;
         padding-right: 10px;
     }
+
     #spotlight div.container div.right div.image div.content a.button {
         margin-top: 20px;
         padding: 10px 16px;
         background: var(--Blue);
         color: #fff;
         font-size: 12px;
+    }
+
+    #about {
+        width: 100%;
+        padding: 60px 0px 40px;
+    }
+
+    #about div.container div.left div.image div.control {
+        position: absolute;
+        bottom: 0px;
+        background-color: #faf9f7;
+        padding: 17px 25px;
+        width: 183px;
+        height: 72px;
+        display: flex;
+        justify-content: space-evenly;
+        opacity: 0.5;
+        transition: opacity 0.4s ease-in;
+    }
+
+    #about div.container div.right div.content p {
+        padding-right: 0px;
+        margin-bottom: 30px;
+        font-size: 12px;
+    }
+
+    #works div.container div.work ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+
+    #works div.container div.work ul li {
+        position: relative;
+        width: 40%;
+        margin-top: 40px;
+    }
+
+    #works div.container div.work ul li div.location {
+        position: absolute;
+        bottom: 0px;
+        height: 20%;
+        width: 90%;
+        background: #f8f4f2;
+        opacity: 0.8;
+        padding: 8px;
+        z-index: 2;
+        cursor: pointer;
+    }
+
+    #works div.container div.work ul li>div.location>h4 {
+        font-size: 18px;
+        font-weight: 600;
+    }
+
+    #works div.container div.work ul li div.location a {
+        font-size: 16px;
+    }
+
+    article div.container div.heading {
+        margin: 12px 0 40px;
+    }
+
+    article div.container div.contents {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    article div.container div.contents div.content {
+        width: 35%;
+        margin-top: 50px;
+    }
+
+    #recommend_Section div.container div.recommends {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    #recommend_Section div.container div.recommends div.recommends_Content {
+        width: 100%;
+    }
+
+    #recommend_Section div.container div.recommends div.recommends_Content ul {
+        margin-top: 30px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    #recommend_Section div.container div.recommends div.recommends_Content ul li {
+        width: 30%;
+    }
+
+    #recommend_Section div.container div.recommends div.recommends_Content ul li:nth-child(2) {
+        width: 60%;
+        text-align: center;
+    }
+
+    #recommend_Section div.container div.recommends div.recommends_Image {
+        width: 100%;
+        padding: 40px;
+        padding-right: 0px;
+        background-color: #faf9f7;
+    }
+
+    #recommend_Section div.container div.recommends div.recommends_Content ul li:nth-child(2)>a::before {
+        content: "";
+        height: 3px;
+        width: 30%;
+        background: var(--Blue);
+        display: block;
+        position: absolute;
+        top: 10px;
+        left: -32px;
+    }
+
+    #recommend_Section div.container div.recommends div.recommends_Image {
+        margin-top: 45px;
+        width: 100%;
+        padding: 25px;
+        padding-right: 0px;
+        background-color: #faf9f7;
+    }
+
+    section.contact div.container {
+        display: flex;
+        flex-wrap: wrap;
+        padding: 50px 0px;
+        position: relative;
+        z-index: 0;
+        background: var(--Dark-Blue);
+    }
+
+    section.contact div.container div.left {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        padding: 10px 0px 30px;
+        justify-content: center;
+    }
+
+    section.contact div.container div.left div.content {
+        width: 80%;
+        padding-right: 240px;
+    }
+
+    section.contact div.container {
+        display: flex;
+        flex-wrap: wrap;
+        padding: 50px 0px 0px;
+        position: static;
+        z-index: 0;
+        background: var(--Dark-Blue);
+    }
+
+    section.contact div.container::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 18%;
+        background-color: #faf9f7;
+        height: 100%;
+        width: 21%;
+        z-index: -1;
+        display: none;
+    }
+
+    section.contact div.container div.right {
+        width: 100%;
+        display: flex;
+        position: relative;
+        justify-content: center;
+        align-items: center;
+        padding: 20px 0px 40px;
+        z-index: 0;
+    }
+
+    section.contact div.container div.right::before {
+        content: "";
+        position: absolute;
+        top: 35%;
+        right: 0%;
+        background-color: #faf9f7;
+        height: 25%;
+        width: 100%;
+        z-index: -1;
+    }
+
+    section.contact div.container div.right form {
+        width: 70%;
+        background: #fff;
+        padding: 30px;
+        z-index: 2;
+    }
+
+    #help div.container {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    #help div.container div.left {
+        width: 100%;
+    }
+
+    #help div.container div.left h2 {
+        font-weight: 500;
+        font-size: 28px;
+        position: relative;
+        padding-right: 310px;
+    }
+
+    #help div.container div.right {
+        width: 100%;
+        padding: 45px 0px 0px 0px;
     }
 }
