--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -464,24 +464,27 @@
     }
 }
 
-@media all and (max-width: 768px){
+@media all and (max-width: 768px) {
     header div.container div.right ul li a {
         position: relative;
         font-weight: 500;
         font-size: 14px;
     }
+
     #spotlight div.container div.right div.image div.content h2 {
         font-weight: 600;
         font-size: 20px;
         margin: 10px 0px;
         padding-right: 40px;
     }
+
     #spotlight div.container div.right div.image div.content p {
         font-size: 8px;
         font-weight: 500;
         margin-bottom: 16px;
         padding-right: 10px;
     }
+
     #spotlight div.container div.right div.image div.content {
         position: absolute;
         top: 29%;
@@ -492,6 +495,7 @@
         text-align: left;
         background-color: #faf9f7;
     }
+
     #about div.container div.left div.image div.control {
         position: absolute;
         bottom: 0px;
@@ -504,15 +508,18 @@
         opacity: 0.5;
         transition: opacity 0.4s ease-in;
     }
+
     #about div.container div.left div.image div.control a {
         display: inline-block;
         width: 30px;
     }
+
     #works div.container div.work ul {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
     }
+
     #about div.container div.right div.content a.button {
         margin-top: 20px;
         padding: 12px 20px;
@@ -520,53 +527,62 @@
         color: #fff;
         font-size: 12px;
     }
+
     #about div.container div.right div.content p {
         padding-right: 0px;
         margin-bottom: 14px;
         font-size: 12px;
     }
+
     #works div.container div.heading {
         width: 100%;
         display: flex;
         justify-content: space-between;
         margin-bottom: 5px;
     }
+
     article div.container div.contents div.content {
         width: 40%;
         margin-top: 50px;
     }
+
     #help div.container div.left h2 {
         font-weight: 500;
         font-size: 28px;
         position: relative;
         padding-right: 40%;
     }
+
     footer div.container div.top {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
     }
-    footer div.container div.top div.left{
+
+    footer div.container div.top div.left {
         width: 40%;
     }
-    footer div.container div.top div.middle{
+
+    footer div.container div.top div.middle {
         width: 40%;
         justify-content: space-between;
     }
 
-    footer div.container div.top div.right{
+    footer div.container div.top div.right {
         width: 100%;
     }
 }
 
-@media all and (max-width: 640px){
+@media all and (max-width: 640px) {
     header div.container div.right {
         width: 75%;
         display: none;
     }
+
     header div.container div.left {
         width: 35%;
     }
+
     #spotlight div.container div.right div.image div.content {
         position: absolute;
         top: 29%;
@@ -577,12 +593,14 @@
         text-align: left;
         background-color: #faf9f7;
     }
+
     #spotlight div.container div.right div.image div.content h2 {
         font-weight: 600;
         font-size: 14px;
         margin: 6px 0px;
         padding-right: 40px;
     }
+
     #spotlight div.container div.right div.image div.content a.button {
         margin-top: 10px;
         padding: 8px 12px;
@@ -590,30 +608,37 @@
         color: #fff;
         font-size: 8px;
     }
+
     #spotlight div.container div.right div.image div.content p {
         font-size: 8px;
         font-weight: 500;
         margin-bottom: 10px;
         padding-right: 10px;
     }
+
     #spotlight div.container div.left div.counts div.count span.number {
         color: var(--Brown);
         font-size: 20px;
         font-family: 'Antonio';
     }
-    #spotlight div.container div.left div.counts div.count p{
+
+    #spotlight div.container div.left div.counts div.count p {
         font-size: 12px;
     }
+
     #about div.container {
         display: flex;
         flex-wrap: wrap;
     }
-    #about div.container div.left{
+
+    #about div.container div.left {
         width: 100%;
     }
-    #about div.container div.right{
+
+    #about div.container div.right {
         width: 100%;
     }
+
     #about div.container div.left div.image div.control {
         position: absolute;
         bottom: 0px;
@@ -626,51 +651,62 @@
         opacity: 0.5;
         transition: opacity 0.4s ease-in;
     }
+
     #about div.container div.left div.image div.control a {
         display: inline-block;
         width: 35px;
     }
+
     #about div.container div.right div.content p {
         padding-right: 0px;
         margin-bottom: 30px;
         font-size: 12px;
     }
+
     #works div.container div.work ul li {
         position: relative;
         width: 45%;
         margin-top: 40px;
     }
+
     #works div.container div.work ul li>div.location>h4 {
         font-size: 14px;
         font-weight: 600;
     }
+
     article div.container div.contents div.content {
         width: 47%;
         margin-top: 50px;
     }
+
     article div.container div.contents div.content h3 {
         font-weight: 500;
         font-size: 20px;
         margin: 40px 0 20px;
     }
+
     #recommend_Section div.container div.heading h2 {
         position: relative;
         font-weight: 500;
         font-size: 22px;
     }
+
     #recommend_Section div.container div.heading div.arrows a {
         display: inline-block;
         width: 30px;
         margin-right: 10px;
     }
-    #recommend_Section div.container div.recommends div.recommends_Content ul li{
+
+    #recommend_Section div.container div.recommends div.recommends_Content ul li {
         width: 33%;
     }
+
     #recommend_Section div.container div.recommends div.recommends_Content ul li a {
         display: block;
         font-weight: 500;
         font-size: 14px;
     }
+
     #recommend_Section div.container div.recommends div.recommends_Content ul li:nth-child(2)>a::before {
         content: "";
         height: 3px;
@@ -681,16 +717,19 @@
         top: 7px;
         left: -30px;
     }
+
     #recommend_Section div.container div.recommends div.recommends_Image ul {
         display: flex;
         flex-wrap: wrap;
         justify-content: end;
     }
+
     #recommend_Section div.container div.recommends div.recommends_Image ul li {
         width: 75%;
         margin-top: 40px;
         position: relative;
     }
+
     #recommend_Section div.container div.recommends div.recommends_Image ul li div.arrow {
         position: absolute;
         bottom: 4px;
@@ -704,15 +743,18 @@
         align-items: center;
         cursor: pointer;
     }
+
     #works div.container div.work ul li {
         position: relative;
         width: 48%;
         margin-top: 40px;
     }
+
     #recommend_Section div.container div.recommends div.recommends_Image ul li div.arrow a {
         display: inline-block;
         width: 25px;
     }
+
     #recommend_Section div.container div.recommends div.recommends_Image {
         margin-top: 45px;
         width: 100%;
@@ -720,19 +762,23 @@
         padding-right: 0px;
         background-color: #faf9f7;
     }
+
     section.contact div.container div.left div.content {
         width: 80%;
         padding-right: 20%;
     }
+
     section.contact div.container div.right form div.input-container {
         width: 100%;
         height: 50px;
         position: relative;
         margin-bottom: 20px;
     }
+
     section.contact div.container div.right form div.textarea {
         height: 98px;
     }
+
     section.contact div.container div.right form button {
         display: block;
         text-align: center;
@@ -743,17 +789,20 @@
         font-size: 20px;
         cursor: pointer;
     }
+
     #help div.container div.left h2 {
         font-weight: 500;
         font-size: 20px;
         position: relative;
         padding-right: 40%;
     }
+
     #help div.container div.left h2>span {
         font-weight: 500;
         font-size: 22px;
         color: var(--Blue);
     }
+
     #help div.container div.left h2::before {
         content: "";
         position: absolute;
@@ -764,19 +813,405 @@
         background: var(--Blue);
         display: block;
     }
+
     #help div.container div.right div.contents_And_Images div.content>p {
         margin-top: 8px;
         font-size: 12px;
     }
+
     footer div.container div.top div.left {
         width: 100%;
         margin-bottom: 50px;
     }
+
     footer div.container div.top div.middle {
         width: 60%;
         justify-content: space-between;
     }
 }
 
-@media all and (max-width: 480px){
+@media all and (max-width: 480px) {
+    header div.container div.left h1 a {
+        display: inline-block;
+        width: 110px;
+    }
+
+    #spotlight div.container div.right div.image div.content h2 {
+        font-weight: 600;
+        font-size: 14px;
+        margin: 0px 0px;
+        padding-right: 0px;
+    }
+
+    #spotlight div.container div.right div.image div.content p {
+        font-size: 5px;
+        font-weight: lighter;
+        margin-bottom: 5px;
+        padding-right: 0px;
+    }
+
+    #spotlight div.container div.right div.image div.content a.button {
+        margin-top: 9px;
+        padding: 8px 12px;
+        background: var(--Blue);
+        color: #fff;
+        font-size: 5px;
+    }
+    #about div.container div.right div.content p {
+        padding-right: 0px;
+        margin-bottom: 25px;
+        font-size: 12px;
+    }
+
+    #spotlight div.container div.left div.counts div.count span.number {
+        color: var(--Brown);
+        font-size: 16px;
+        font-family: 'Antonio';
+    }
+
+    #spotlight div.container div.left div.counts div.count p {
+        font-size: 8px;
+    }
+
+    #about div.container div.left div.image div.control {
+        position: absolute;
+        bottom: 0px;
+        background-color: #faf9f7;
+        padding: 20px 24px;
+        width: 160px;
+        height: 65px;
+        display: flex;
+        justify-content: space-evenly;
+        opacity: 0.5;
+        transition: opacity 0.4s ease-in;
+    }
+    #about div.container div.left div.image div.control a {
+        display: inline-block;
+        width: 25px;
+    }
+
+    #about div.container div.left div.image div.control a {
+        font-size: 18px;
+    }
+
+    #works div.container div.heading h2 {
+        position: relative;
+        font-weight: 500;
+        font-size: 22px;
+    }
+
+    #about div.container div.right div.content h2 {
+        position: relative;
+        font-weight: 500;
+        font-size: 22px;
+        margin-bottom: 20px;
+    }
+
+    #works div.container div.heading div.arrows a {
+        display: inline-block;
+        width: 22px;
+        margin-right: 10px;
+    }
+
+    #works div.container div.work ul li {
+        position: relative;
+        width: 70%;
+        margin-top: 40px;
+    }
+
+    #works div.container div.work ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    #works section.wrapper {
+        width: 90%;
+        margin: 0 auto;
+        max-width: 1200px;
+    }
+
+    article div.container div.heading {
+        margin: 12px 0 20px;
+    }
+
+    article div.container div.heading h2::after {
+        content: "";
+        position: absolute;
+        height: 4px;
+        width: 10%;
+        left: 0;
+        bottom: -9px;
+        background: var(--Blue);
+        display: block;
+    }
+
+    #works div.container div.work ul li>div.location>h4 {
+        font-size: 12px;
+        font-weight: 600;
+    }
+
+    #works div.container div.work ul li div.location a {
+        font-size: 14px;
+    }
+
+    #works div.container div.work ul li div.location a img {
+        margin-right: 5px;
+        width: 4%;
+    }
+
+    #recommend_Section div.container div.recommends div.recommends_Image ul li div.arrow {
+        position: absolute;
+        bottom: 4px;
+        height: 50px;
+        width: 40%;
+        background: #f8f4f2;
+        opacity: 0.8;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    #recommend_Section section.wrapper {
+        width: 90%;
+        margin: 0 auto;
+        max-width: 1200px;
+    }
+
+    #recommend_Section div.container div.recommends div.recommends_Image ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    article div.container div.heading h2 {
+        position: relative;
+        font-weight: 500;
+        font-size: 25px;
+    }
+
+    article div.container div.heading h2::after {
+        content: "";
+        position: absolute;
+        height: 4px;
+        width: 15%;
+        left: 0;
+        bottom: -9px;
+        background: var(--Blue);
+        display: block;
+    }
+
+    article div.container div.contents div.content {
+        width: 70%;
+        margin-top: 60px;
+    }
+
+    article div.container div.contents {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    article div.container div.contents div.content h3 {
+        font-weight: 500;
+        font-size: 16px;
+        margin: 25px 0 10px;
+    }
+
+    article div.container div.contents div.content p {
+        font-size: 12px;
+    }
+
+    article div.container div.contents div.content a::before {
+        content: "";
+        position: absolute;
+        height: 60px;
+        width: 70px;
+        left: -22px;
+        bottom: -15px;
+        background: #fff;
+        display: block;
+        z-index: -1;
+    }
+
+    article div.container div.contents div.content a {
+        display: block;
+        width: 10%;
+        margin-left: 25px;
+        position: relative;
+        z-index: 0;
+    }
+
+    article div.container div.heading h2 {
+        position: relative;
+        font-weight: 500;
+        font-size: 22px;
+    }
+
+    #recommend_Section div.container div.heading h2 {
+        position: relative;
+        font-weight: 600;
+        font-size: 18px;
+    }
+
+    #recommend_Section div.container div.heading div.arrows a {
+        display: inline-block;
+        width: 25px;
+        margin-right: 10px;
+    }
+
+    #recommend_Section div.container div.recommends div.recommends_Content ul li {
+        width: 100%;
+    }
+
+    #recommend_Section div.container div.recommends div.recommends_Content ul li:nth-child(2) {
+        width: 100%;
+        text-align: center;
+    }
+
+    section.contact div.container div.left div.content h2 {
+        color: #fff;
+        position: relative;
+        font-weight: 500;
+        font-size: 28px;
+    }
+
+    section.contact div.container div.left div.content {
+        width: 80%;
+        padding-right: 12%;
+    }
+
+    section.contact div.container div.left div.content p {
+        margin: 8px 0px 0px;
+        font-size: 12px;
+    }
+
+    section.contact div.container div.left div.content ul li {
+        margin-right: 20px;
+    }
+
+    section.contact div.container div.left div.content ul li a {
+        display: inline-block;
+        width: 20px;
+    }
+
+    section.contact div.container div.left div.content ul li:first-child a {
+        display: inline-block;
+        width: 12px;
+    }
+
+    section.contact div.container div.right form {
+        width: 80%;
+        background: #fff;
+        padding: 30px;
+        z-index: 2;
+    }
+
+    section.contact div.container div.right form h4 {
+        font-weight: 500;
+        font-size: 25px;
+        margin-bottom: 35px;
+    }
+
+    section.contact div.container div.right form div.input-container label {
+        width: 80px;
+        text-align: center;
+        position: absolute;
+        left: 10px;
+        top: 20px;
+        transition: all 0.2s;
+        padding: 0 2px;
+        z-index: 2;
+        color: #b3b3b3;
+        font-size: 14px;
+    }
+
+    section.contact div.container div.right form button {
+        display: block;
+        text-align: center;
+        background: var(--Blue);
+        width: 100%;
+        height: 45px;
+        color: #fff;
+        font-size: 15px;
+        cursor: pointer;
+    }
+    #recommend_Section div.container div.recommends div.recommends_Image ul li div.arrow a {
+        display: inline-block;
+        width: 18px;
+    }
+    #help div.container div.right div.contents_And_Images div.content {
+        width: 50%;
+    }
+    #help div.container div.right div.contents_And_Images div.img {
+        width: 40%;
+    }
+    #help div.container div.left h2 {
+        font-weight: 500;
+        font-size: 20px;
+        position: relative;
+        padding-right: 17%;
+    }
+
+    #help div.container div.left div.img>div.name>a {
+        display: inline-block;
+        width: 130px;
+        padding: 20px 22px;
+        font-weight: 500;
+        font-size: 15px;
+        color: var(--Blue);
+    }
+
+    #help div.container div.right div.contents_And_Images div.content>a {
+        display: inline-block;
+        width: 120px;
+        font-weight: 500;
+        font-size: 15px;
+    }
+
+    #help div.container div.right div.contents_And_Images div.content>p {
+        margin-top: 8px;
+        font-size: 11px;
+    }
+    #works div.container div.work ul li div.location a {
+        font-size: 12px;
+    }
+
+    footer div.container div.top div.left h1 a {
+        display: inline-block;
+        width: 110px;
+    }
+
+    footer div.container div.top div.left p {
+        font-size: 12px;
+    }
+
+    footer div.container div.top div.middle h4 {
+        color: #fff;
+        font-size: 16px;
+    }
+
+    footer div.container div.top div.right h4 {
+        color: #fff;
+        font-size: 16px;
+    }
+
+    footer div.container div.top div.middle ul li a {
+        font-size: 14px;
+    }
+
+    footer div.container div.top div.right p a {
+        font-size: 14px;
+    }
+
+    footer div.container div.top div.middle {
+        width: 80%;
+        justify-content: space-between;
+    }
+
+    footer div.container div.bottom span {
+        font-size: 16px;
+    }
 }
