--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -857,6 +857,7 @@
         color: #fff;
         font-size: 5px;
     }
+
     #about div.container div.right div.content p {
         padding-right: 0px;
         margin-bottom: 25px;
@@ -885,6 +886,7 @@
         opacity: 0.5;
         transition: opacity 0.4s ease-in;
     }
+
     #about div.container div.left div.image div.control a {
         display: inline-block;
         width: 25px;
@@ -1138,16 +1140,20 @@
         font-size: 15px;
         cursor: pointer;
     }
+
     #recommend_Section div.container div.recommends div.recommends_Image ul li div.arrow a {
         display: inline-block;
         width: 18px;
     }
+
     #help div.container div.right div.contents_And_Images div.content {
         width: 50%;
     }
+
     #help div.container div.right div.contents_And_Images div.img {
         width: 40%;
     }
+
     #help div.container div.left h2 {
         font-weight: 500;
         font-size: 20px;
@@ -1175,6 +1181,7 @@
         margin-top: 8px;
         font-size: 11px;
     }
+
     #works div.container div.work ul li div.location a {
         font-size: 12px;
     }
@@ -1213,5 +1220,125 @@
 
     footer div.container div.bottom span {
         font-size: 16px;
+    }
+}
+
+@media all and (max-width: 360px) {
+    header div.container div.left h1 a {
+        display: inline-block;
+        width: 90px;
+    }
+
+    #spotlight div.container div.right div.image div.content h2 {
+        font-weight: 600;
+        font-size: 11px;
+        margin: 0px 0px;
+        padding-right: 0px;
+    }
+
+    #spotlight div.container div.right div.image div.content a.button {
+        margin-top: 0px;
+        padding: 5px 10px;
+        background: var(--Blue);
+        color: #fff;
+        font-size: 5px;
+    }
+
+    #spotlight div.container div.right div.image div.content p {
+        font-size: 5px;
+        font-weight: lighter;
+        margin-bottom: 0px;
+        padding-right: 0px;
+    }
+
+    #about div.container div.left div.image div.control {
+        position: absolute;
+        bottom: 0px;
+        background-color: #faf9f7;
+        padding: 20px 24px;
+        width: 135px;
+        height: 55px;
+        display: flex;
+        justify-content: space-evenly;
+        opacity: 0.5;
+        transition: opacity 0.4s ease-in;
+    }
+
+    #about div.container div.right div.content a.button {
+        margin-top: 20px;
+        padding: 12px 20px;
+        background: var(--Blue);
+        color: #fff;
+        font-size: 10px;
+    }
+
+    #about div.container div.right div.content p {
+        padding-right: 0px;
+        margin-bottom: 20px;
+        font-size: 12px;
+    }
+
+    #recommend_Section div.container div.heading h2 {
+        position: relative;
+        font-weight: 600;
+        font-size: 15px;
+    }
+
+    #recommend_Section div.container div.heading {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 40px;
+    }
+
+    #recommend_Section div.container div.recommends div.recommends_Image ul li div.arrow {
+        position: absolute;
+        bottom: 4px;
+        height: 40px;
+        width: 40%;
+        background: #f8f4f2;
+        opacity: 0.8;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    section.contact div.container div.right form h4 {
+        font-weight: 500;
+        font-size: 25px;
+        margin-bottom: 15px;
+    }
+
+    section.contact div.container div.right form h4 {
+        font-weight: 500;
+        font-size: 22px;
+        margin-bottom: 15px;
+    }
+
+    section.contact div.container div.right form button {
+        display: block;
+        text-align: center;
+        background: var(--Blue);
+        width: 100%;
+        height: 40px;
+        color: #fff;
+        font-size: 12px;
+        cursor: pointer;
+    }
+
+    #help div.container div.right div.contents_And_Images div.content {
+        width: 60%;
+    }
+
+    footer {
+        background: var(--Dark-Blue);
+        padding: 30px 0px 0px;
+    }
+
+    footer div.container div.top div.left {
+        width: 100%;
+        margin-bottom: 30px;
     }
 }
